// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefusedUsersList does not render refresh share button 1`] = `
<div>
  <h3
    class="pt-3"
  >
    Refused
  </h3>
  <div
    class="list-group"
  >
    
    <div
      data-test-id="refused-user-2"
    >
      <div
        class="list-group-item"
      >
        bar@example.com
      </div>
    </div>
  </div>
</div>
`;

exports[`RefusedUsersList renders refresh share button 1`] = `
<div>
  <h3
    class="pt-3"
  >
    Refused
  </h3>
  <div
    class="list-group"
  >
    
    <div
      class="list-group-item"
      data-test-id="refused-user-2"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="pt-1 col-md-6"
        >
          bar@example.com
        </div>
        <div
          class="pt-1 col-md-4"
        />
        <div
          class="col-md-2"
        >
          <div
            class="float-right btn-group"
            role="group"
          >
            <button
              class="p-0 mr-3 btn btn-link"
              data-test-id="refresh-share"
              type="button"
            >
              <i
                class="fa fa-redo fa-2x text-primary"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
